feat: improve line login flow
